--- a/admin/admin-service/src/test/resources/application-test.properties
+++ b/admin/admin-service/src/test/resources/application-test.properties
@@ -319,3 +319,6 @@ mosip.iam.module.admin_realm_id=mosip
 mosip.iam.token_endpoint=http://localhost:8080/keycloak/auth/realms/{realmId}/protocol/openid-connect/token
 
 mosip.admin-services.required.roles=GLOBAL_ADMIN
+
+mosip.admin.globalproperty.prefix=globalMessages_
+mosip.admin.globalproperty.suffix=.properties
