--- a/admin/admin-service/src/test/resources/bootstrap.properties
+++ b/admin/admin-service/src/test/resources/bootstrap.properties
@@ -16,3 +16,5 @@ server.servlet.path=/r2/v1/admin
 #disabling health check so that client doesnt try to load properties from sprint config server every
 # 5 minutes (should not be done in production)
 health.config.enabled=false
+mosip.admin.globalproperty.prefix=globalMessages_
+mosip.admin.globalproperty.suffix=.properties
