--- a/admin/kernel-masterdata-service/src/main/resources/application-local.properties
+++ b/admin/kernel-masterdata-service/src/main/resources/application-local.properties
@@ -81,4 +81,7 @@ scheduling.job.cron=0 0 2 * * ?
 masterdata.websub.resubscription.delay.millis=6000000
 masterdata.subscriptions-delay-on-startup=120000
 
+openapi.masterdata.servers[0].url=http://localhost:8086/v1/masterdata
+openapi.masterdata.servers[0].description=Admin Masterdata url
+
 
