--- a/admin/kernel-masterdata-service/src/test/resources/application.properties
+++ b/admin/kernel-masterdata-service/src/test/resources/application.properties
@@ -67,3 +67,14 @@ masterdata.subscriptions-delay-on-startup=120000
 scheduling.job.cron=0 0 2 * * ?
 
 spring.cache.type=NONE
+
+# swagger open api 
+openapi.info.title=Master Data Service
+openapi.info.description=Master Data Service for CRUD
+openapi.info.version=1.0
+openapi.info.license.name=Mosip
+openapi.info.license.url=https://docs.mosip.io/platform/license
+springdoc.swagger-ui.disable-swagger-default-url=true
+#master.search.maximum.rows=50
+openapi.masterdata.servers[0].url=http://localhost:8086/v1/masterdata
+openapi.masterdata.servers[0].description=Admin Masterdata url
