--- a/admin/kernel-masterdata-service/src/test/resources/bootstrap.properties
+++ b/admin/kernel-masterdata-service/src/test/resources/bootstrap.properties
@@ -46,3 +46,14 @@ auth.server.validate.url=http://localhost:8080/validateToken
 mosip.kernel.applicantType.mvel.file=abc
 master.search.maximum.rows=50
 mosip.kernel.masterdata.audit-url=https://dev.mosip.io/v1/auditmanager/audits
+
+# swagger open api 
+openapi.info.title=Master Data Service
+openapi.info.description=Master Data Service for CRUD
+openapi.info.version=1.0
+openapi.info.license.name=Mosip
+openapi.info.license.url=https://docs.mosip.io/platform/license
+springdoc.swagger-ui.disable-swagger-default-url=true
+#master.search.maximum.rows=50
+openapi.masterdata.servers[0].url=http://localhost:8086/v1/masterdata
+openapi.masterdata.servers[0].description=Admin Masterdata url
