--- a/admin/kernel-masterdata-service/src/main/resources/application-local.properties
+++ b/admin/kernel-masterdata-service/src/main/resources/application-local.properties
@@ -85,3 +85,4 @@ openapi.masterdata.servers[0].url=http://localhost:8086/v1/masterdata
 openapi.masterdata.servers[0].description=Admin Masterdata url
 
 
+zone.user.details.url=https://dev.mosip.net/v1/authmanager/userdetails
