--- a/admin/kernel-masterdata-service/src/test/resources/application.properties
+++ b/admin/kernel-masterdata-service/src/test/resources/application.properties
@@ -78,3 +78,4 @@ springdoc.swagger-ui.disable-swagger-default-url=true
 #master.search.maximum.rows=50
 openapi.masterdata.servers[0].url=http://localhost:8086/v1/masterdata
 openapi.masterdata.servers[0].description=Admin Masterdata url
+zone.user.details.url=https://dev.mosip.net/v1/authmanager/userdetails
