--- a/admin/kernel-masterdata-service/src/test/resources/application.properties
+++ b/admin/kernel-masterdata-service/src/test/resources/application.properties
@@ -1,6 +1,5 @@
 
 # In Memory DB For Test
---------------------------------------
 javax.persistence.jdbc.driver=org.h2.Driver
 javax.persistence.jdbc.url=jdbc:h2\:mem\:testdb;DB_CLOSE_DELAY=-1;IGNORECASE=TRUE;INIT=CREATE SCHEMA IF NOT EXISTS master
 javax.persistence.jdbc.user=sa
@@ -396,3 +395,5 @@ mosip.role.admin.masterdata.deletezoneuseruseridzonecode=GLOBAL_ADMIN,ZONAL_ADMI
 mosip.role.admin.masterdata.getzoneuserhistoryuserid=GLOBAL_ADMIN,ZONAL_ADMIN,REGISTRATION_OFFICER,REGISTRATION_PROCESSOR,PRE_REGISTRATION,REGISTRATION_SUPERVISOR,RESIDENT,INDIVIDUAL,ID_AUTHENTICATION
 mosip.role.admin.masterdata.patchzoneuser=GLOBAL_ADMIN,ZONAL_ADMIN
 mosip.role.admin.masterdata.postzoneusersearch=GLOBAL_ADMIN,ZONAL_ADMIN
+
+mosip.centertypecode.validate.regex=^[a-zA-Z0-9]([_-](?![_-])|[a-zA-Z0-9]){0,34}[a-zA-Z0-9]$
