--- a/admin/kernel-masterdata-service/src/main/resources/application-local.properties
+++ b/admin/kernel-masterdata-service/src/main/resources/application-local.properties
@@ -394,6 +394,9 @@ mosip.role.admin.masterdata.getzoneuserhistoryuserid=GLOBAL_ADMIN,ZONAL_ADMIN,RE
 mosip.role.admin.masterdata.patchzoneuser=GLOBAL_ADMIN,ZONAL_ADMIN
 mosip.role.admin.masterdata.postzoneusersearch=GLOBAL_ADMIN,ZONAL_ADMIN
 
+mosip.role.admin.masterdata.getdocumenttypesmissingidslangcode=GLOBAL_ADMIN,ZONAL_ADMIN
+mosip.role.admin.masterdata.getdocumentcategoriesmissingidslangcode=GLOBAL_ADMIN,ZONAL_ADMIN
+
 openapi.masterdata.servers[0].url=http://localhost:8086/v1/masterdata
 openapi.masterdata.servers[0].description=Admin Masterdata url
 
