--- a/admin/kernel-masterdata-service/src/test/resources/application.properties
+++ b/admin/kernel-masterdata-service/src/test/resources/application.properties
@@ -396,4 +396,7 @@ mosip.role.admin.masterdata.getzoneuserhistoryuserid=GLOBAL_ADMIN,ZONAL_ADMIN,RE
 mosip.role.admin.masterdata.patchzoneuser=GLOBAL_ADMIN,ZONAL_ADMIN
 mosip.role.admin.masterdata.postzoneusersearch=GLOBAL_ADMIN,ZONAL_ADMIN
 
+mosip.role.admin.masterdata.getdocumenttypesmissingidslangcode=GLOBAL_ADMIN,ZONAL_ADMIN
+mosip.role.admin.masterdata.getdocumentcategoriesmissingidslangcode=GLOBAL_ADMIN,ZONAL_ADMIN
+
 mosip.centertypecode.validate.regex=^[a-zA-Z0-9]([_-](?![_-])|[a-zA-Z0-9]){0,34}[a-zA-Z0-9]$
