--- a/admin/admin-service/pom.xml
+++ b/admin/admin-service/pom.xml
@@ -53,6 +53,18 @@
 		  <artifactId>spring-batch-excel</artifactId>
 		  <version>0.1.0</version>
 		</dependency>
+		
+		<dependency>
+             <groupId>org.apache.logging.log4j</groupId>
+             <artifactId>log4j-to-slf4j</artifactId>
+             <version>2.17.2</version>
+         </dependency>
+
+         <dependency>
+             <groupId>org.apache.logging.log4j</groupId>
+             <artifactId>log4j-api</artifactId>
+             <version>2.17.2</version>
+         </dependency>
 	
 	    <dependency>
 			<groupId>io.mosip.kernel</groupId>
@@ -128,7 +140,7 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-
+		
 		<dependency>
 			<groupId>io.mosip.commons</groupId>
 			<artifactId>commons-packet-manager</artifactId>
