--- a/admin/kernel-masterdata-service/pom.xml
+++ b/admin/kernel-masterdata-service/pom.xml
@@ -117,10 +117,10 @@
 		<micrometer.core.version>1.4.2</micrometer.core.version>
 		<micrometer.registry.prometheus.version>1.4.2</micrometer.registry.prometheus.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<kernel.applicant-type.version>1.2.0</kernel.applicant-type.version>
-		<kernel.logger.logback.version>1.2.0</kernel.logger.logback.version>
+		<kernel.applicant-type.version>1.2.1-SNAPSHOT</kernel.applicant-type.version>
+		<kernel.logger.logback.version>1.2.1-SNAPSHOT</kernel.logger.logback.version>
 		<tss.version>0.3.0</tss.version>
-		<kernel.websubclient.api.version>1.2.0</kernel.websubclient.api.version>
+		<kernel.websubclient.api.version>1.2.1-SNAPSHOT</kernel.websubclient.api.version>
 		<kernel.version>1.2.1-SNAPSHOT</kernel.version>
 	</properties>
 
