--- a/admin/admin-service/pom.xml
+++ b/admin/admin-service/pom.xml
@@ -34,11 +34,6 @@
 		</dependency>
 		<dependency>
 		    <groupId>org.apache.poi</groupId>
-		    <artifactId>poi</artifactId>
-		    <version>5.2.2</version>
-		</dependency>
-		<dependency>
-		    <groupId>org.apache.poi</groupId>
 		    <artifactId>poi-ooxml</artifactId>
 		    <version>5.2.2</version>
 		</dependency>
@@ -53,18 +48,12 @@
 		  <artifactId>spring-batch-excel</artifactId>
 		  <version>0.1.0</version>
 		</dependency>
-		
 		<dependency>
-             <groupId>org.apache.logging.log4j</groupId>
-             <artifactId>log4j-to-slf4j</artifactId>
-             <version>2.17.2</version>
-         </dependency>
-
-         <dependency>
-             <groupId>org.apache.logging.log4j</groupId>
-             <artifactId>log4j-api</artifactId>
-             <version>2.17.2</version>
-         </dependency>
+		    <groupId>com.documents4j</groupId>
+		    <artifactId>documents4j-parent</artifactId>
+		    <version>1.1.9</version>
+		    <type>pom</type>
+		</dependency>
 	
 	    <dependency>
 			<groupId>io.mosip.kernel</groupId>
