--- a/admin/admin-service/pom.xml
+++ b/admin/admin-service/pom.xml
@@ -186,7 +186,6 @@
 			<artifactId>biometrics-util</artifactId>
 			<version>${kernel.version}</version>
 		</dependency>
-
 	</dependencies>
 	<build>
 		<plugins>
@@ -224,6 +223,20 @@
 		<version>4.1.72.Final</version>
 	</dependency>
 </dependencies>
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.apache.logging.log4j</groupId>
+				<artifactId>log4j-to-slf4j</artifactId>
+				<version>2.17.2</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.logging.log4j</groupId>
+				<artifactId>log4j-api</artifactId>
+				<version>2.17.2</version>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 <build>
 	<plugins>
 		<plugin>
