--- a/admin/admin-service/pom.xml
+++ b/admin/admin-service/pom.xml
@@ -39,26 +39,21 @@
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
-		    <groupId>org.apache.poi</groupId>
-		    <artifactId>poi-ooxml</artifactId>
-		    <version>5.2.2</version>
-		</dependency>
-		<dependency>
 		    <groupId>commons-io</groupId>
 		    <artifactId>commons-io</artifactId>
 		    <version>2.10.0</version>
 		</dependency>
-		
+
+		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>4.1.1</version>
+		</dependency>
 		<dependency>
 		  <groupId>org.springframework.batch.extensions</groupId>
 		  <artifactId>spring-batch-excel</artifactId>
 		  <version>0.1.0</version>
-		</dependency>
-		<dependency>
-		    <groupId>com.documents4j</groupId>
-		    <artifactId>documents4j-parent</artifactId>
-		    <version>1.1.9</version>
-		    <type>pom</type>
 		</dependency>
 	
 	    <dependency>
@@ -191,6 +186,17 @@
 			<groupId>io.mosip.biometric.util</groupId>
 			<artifactId>biometrics-util</artifactId>
 			<version>${kernel.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.mosip.kernel</groupId>
+			<artifactId>kernel-auth-adapter</artifactId>
+			<version>1.2.1-SNAPSHOT</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-starter-webflux</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 	</dependencies>
 	<build>
