--- a/admin/admin-service/pom.xml
+++ b/admin/admin-service/pom.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <project
-   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-   xmlns="http://maven.apache.org/POM/4.0.0"
-   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+        xmlns="http://maven.apache.org/POM/4.0.0"
+        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
    <modelVersion>4.0.0</modelVersion>
    <parent>
       <groupId>io.mosip.admin</groupId>
@@ -16,7 +16,6 @@
    <packaging>jar</packaging>
    <properties>
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-      <spring-cloud-config.version>2.0.4.RELEASE</spring-cloud-config.version>
    </properties>
    <dependencies>
       <dependency>
@@ -30,7 +29,7 @@
          <version>${lombok.version}</version>
          <scope>compile</scope>
       </dependency>
-       <dependency>
+      <dependency>
          <groupId>io.mosip.kernel</groupId>
          <artifactId>kernel-authcodeflowproxy-api</artifactId>
          <version>1.1.5.3</version>
@@ -41,15 +40,10 @@
          <version>1.1.5.3</version>
       </dependency>
       <dependency>
-         <groupId>org.springframework.cloud</groupId>
-         <artifactId>spring-cloud-starter-config</artifactId>
-         <version>${spring-cloud-config.version}</version>
-      </dependency>
-      <dependency>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-starter-batch</artifactId>
          <version>${spring.boot.version}</version>
-       </dependency>     
+      </dependency>
       <dependency>
          <groupId>org.postgresql</groupId>
          <artifactId>postgresql</artifactId>
@@ -62,16 +56,16 @@
          <scope>runtime</scope>
       </dependency>
       <dependency>
-          <groupId>javax.xml.bind</groupId>
-           <artifactId>jaxb-api</artifactId>
-          <version>2.3.0</version>
-       </dependency>
-       <dependency>
-          <groupId>com.google.code.gson</groupId>
-          <artifactId>gson</artifactId>
-          <version>2.8.6</version>
+         <groupId>javax.xml.bind</groupId>
+         <artifactId>jaxb-api</artifactId>
+         <version>2.3.0</version>
       </dependency>
-       <dependency>
+      <dependency>
+         <groupId>com.google.code.gson</groupId>
+         <artifactId>gson</artifactId>
+         <version>2.8.6</version>
+      </dependency>
+      <dependency>
          <groupId>io.springfox</groupId>
          <artifactId>springfox-swagger-ui</artifactId>
          <version>${springfox.version}</version>
@@ -80,11 +74,6 @@
          <groupId>io.springfox</groupId>
          <artifactId>springfox-swagger2</artifactId>
          <version>${springfox.version}</version>
-      </dependency>
-      <dependency>
-         <groupId>org.springframework.boot</groupId>
-         <artifactId>spring-boot-starter-security</artifactId>
-         <version>${spring.boot.version}</version>
       </dependency>
       <dependency>
          <groupId>org.springframework.security</groupId>
@@ -111,40 +100,40 @@
          <artifactId>junit</artifactId>
          <version>4.12</version>
       </dependency>
+
+      <dependency>
+         <groupId>org.digibooster.spring.batch</groupId>
+         <artifactId>spring-batch-security</artifactId>
+         <version>1.0.0</version>
+      </dependency>
       <dependency>
          <groupId>io.mosip.commons</groupId>
          <artifactId>commons-packet-manager</artifactId>
          <version>1.1.5.5</version>
          <exclusions>
             <exclusion>
+               <groupId>io.mosip.kernel</groupId>
+               <artifactId>kernel-core</artifactId>
+            </exclusion>
+            <exclusion>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-webflux</artifactId>
             </exclusion>
+         </exclusions>
+      </dependency>
+
+      <dependency>
+         <groupId>io.mosip.kernel</groupId>
+         <artifactId>kernel-auth-adapter</artifactId>
+         <version>1.1.5.5-SNAPSHOT</version>
+         <exclusions>
             <exclusion>
-               <groupId>io.vertx</groupId>
-               <artifactId>vertx-web</artifactId>
-            </exclusion>
-            <exclusion>
-               <groupId>io.mosip.kernel</groupId>
-               <artifactId>kernel-auth-adapter</artifactId>
-            </exclusion>
-            <exclusion>
-               <groupId>io.mosip.kernel</groupId>
-               <artifactId>kernel-logger-logback</artifactId>
+               <groupId>org.springframework.boot</groupId>
+               <artifactId>spring-boot-starter-webflux</artifactId>
             </exclusion>
          </exclusions>
       </dependency>
-      <dependency>
-			<groupId>org.digibooster.spring.batch</groupId>
-			<artifactId>spring-batch-security</artifactId>
-			<version>1.0.0</version>
-			<exclusions>
-				<exclusion>
-					<groupId>org.slf4j</groupId>
-					<artifactId>slf4j-api</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
+
    </dependencies>
    <build>
       <plugins>
