--- a/db_release_scripts/mosip_master/deploy.properties
+++ b/db_release_scripts/mosip_master/deploy.properties
@@ -1,8 +1,8 @@
 DB_SERVERIP=localhost
-DB_PORT=5432
+DB_PORT=30091
 SU_USER=postgres
 DEFAULT_DB_NAME=postgres
 MOSIP_DB_NAME=mosip_master
 ALTER_SCRIPT_FILENAME=upgrade.sql
 REVOKE_SCRIPT_FILENAME=revoke.sql
-PRIMARY_LANGUAGE_CODE='eng'
+PRIMARY_LANGUAGE_CODE=eng
