--- a/admin/admin-service/src/main/resources/application-local1.properties
+++ b/admin/admin-service/src/main/resources/application-local1.properties
@@ -11,7 +11,7 @@ RETRIEVE_IDENTITY_API=https://api-internal.dev1.mosip.net/idrepository/v1/identi
 mosip.admin.applicant-details.max.login.count=30
 
 #-------------------Digital Card Api-----------------------------------
-DIGITAL_CARD_STATUS_URLhttps://api-internal.dev1.mosip.net/v1/digitalcard
+DIGITAL_CARD_STATUS_URL=https://api-internal.dev1.mosip.net/v1/digitalcard
 mosip.admin-appid=admin
 mosip.admin.app-id=admin
 mosip.admin-otp-context=auth-otp
@@ -82,100 +82,6 @@ hibernate.generate_statistics=false
 #mosip.admin.navigation.invalidateToken-uri=/authorize/invalidateToken
 #mosip.admin.navigation.sendOTP-uri=/authenticate/sendotp
 #mosip.admin.navigation.validateOTP-uri=/authenticate/useridOTP
-
-
-
-
-#---------------------------Masterdata Cards---------------------------------
-
-mosip.admin.masterdata.lang-code=eng,ara,fra
-#masterdata machine
-mosip.admin.masterdata.card.machines-eng=Machines
-mosip.admin.masterdata.card.machines-ara=\u0622\u0644\u0627\u062A
-mosip.admin.masterdata.card.machines-fra=Machines
-
-#masterdata devices
-mosip.admin.masterdata.card.devices-eng=Devices
-mosip.admin.masterdata.card.devices-ara=\u0627\u0644\u0623\u062C\u0647\u0632\u0629
-mosip.admin.masterdata.card.devices-fra=Dispositifs
-
-#masterdata registration center
-mosip.admin.masterdata.card.centers-eng=Registration Center
-mosip.admin.masterdata.card.centers-fra=Centre d'inscription
-mosip.admin.masterdata.card.centers-ara=\u0645\u0631\u0643\u0632 \u0627\u0644\u062A\u0633\u062C\u064A\u0644
-
-#masterdata blocklisted words
-mosip.admin.masterdata.card.blocklisted-eng=Blocklisted Words
-mosip.admin.masterdata.card.blocklisted-fra=Mots sur la liste noire
-mosip.admin.masterdata.card.blocklisted-ara=\u0643\u0644\u0645\u0627\u062A \u0641\u064A \u0627\u0644\u0642\u0627\u0626\u0645\u0629 \u0627\u0644\u0633\u0648\u062F\u0627\u0621
-
-#masterdata application
-mosip.admin.masterdata.card.applications-eng=Application
-mosip.admin.masterdata.card.applications-fra=Application
-mosip.admin.masterdata.card.applications-ara=\u0627\u0644\u0648\u0636\u0639\u064A\u0629
-
-#masterdata title
-mosip.admin.masterdata.card.titles-eng=Title
-mosip.admin.masterdata.card.titles-fra=Titre
-mosip.admin.masterdata.card.titles-ara=\u0639\u0646\u0648\u0627\u0646
-
-#masterdata idtype
-mosip.admin.masterdata.card.idtypes-eng=Id Type
-mosip.admin.masterdata.card.idtypes-fra=type d'identifiant
-mosip.admin.masterdata.card.idtypes-ara=\u0646\u0648\u0639 \u0645\u0639\u0631\u0641
-
-#masterdata gender
-mosip.admin.masterdata.card.genders-eng=Gender
-mosip.admin.masterdata.card.genders-fra=le sexe
-mosip.admin.masterdata.card.genders-ara=\u062C\u0646\u0633
-
-#masterdata individual types
-mosip.admin.masterdata.card.individuals-eng=Individual
-mosip.admin.masterdata.card.individuals-fra=Individuel
-mosip.admin.masterdata.card.individuals-ara=\u0641\u0631\u062F
-
-#masterdata document types
-mosip.admin.masterdata.card.document-types-eng=Document Types
-mosip.admin.masterdata.card.document-types-fra=Types de documents
-mosip.admin.masterdata.card.document-types-ara=\u0623\u0646\u0648\u0627\u0639 \u0627\u0644\u0645\u0633\u062A\u0646\u062F\u0627\u062A
-
-#masterdata document category
-mosip.admin.masterdata.card.document-category-eng=Document Category
-mosip.admin.masterdata.card.document-category-fra=Catégorie de document
-mosip.admin.masterdata.card.document-category-ara=\u0641\u0626\u0629 \u0627\u0644\u0648\u062B\u064A\u0642\u0629
-
-#masterdata device specs
-mosip.admin.masterdata.card.device-specs-eng=Device Specification
-mosip.admin.masterdata.card.device-specs-fra=Spécification de l'appareil
-mosip.admin.masterdata.card.device-specs-ara=\u0645\u0648\u0627\u0635\u0641\u0627\u062A \u0627\u0644\u062C\u0647\u0627\u0632
-
-#masteradata holidays
-mosip.admin.masterdata.card.holidays-eng=Holidays
-mosip.admin.masterdata.card.holidays-fra=Vacances
-mosip.admin.masterdata.card.holidays-ara=\u0627\u0644\u0639\u0637\u0644
-
-#masterdata locations
-mosip.admin.masterdata.card.locations-eng=Locations
-mosip.admin.masterdata.card.locations-fra=Emplacements
-mosip.admin.masterdata.card.locations-ara=\u0645\u0648\u0627\u0642\u0639
-
-#masterdata rejection reason
-mosip.admin.masterdata.card.rejection-reason-eng=Rejection Reasons
-mosip.admin.masterdata.card.rejection-reason-fra=Motifs de rejet
-mosip.admin.masterdata.card.rejection-reason-ara=\u0623\u0633\u0628\u0627\u0628 \u0627\u0644\u0631\u0641\u0636
-
-#masterdata template
-mosip.admin.masterdata.card.templates-eng=Templates
-mosip.admin.masterdata.card.templates-fra=Modèles
-mosip.admin.masterdata.card.templates-ara=\u0642\u0648\u0627\u0644\u0628
-
-#masterdata valid document
-mosip.admin.masterdata.card.valid-document-eng=Valid Documents
-mosip.admin.masterdata.card.valid-document-fra=Documents valides
-mosip.admin.masterdata.card.valid-document-ara=\u0648\u062B\u0627\u0626\u0642 \u0635\u0627\u0644\u062D\u0629
-
-#------------------------------------------------------------------------------------------------------------------
-
 #process flow config validator
 mosip.admin.processflow.reg=${spring.cloud.config.uri}/registration/${spring.profiles.active}/${spring.cloud.config.label}/registration-${spring.profiles.active}.properties
 mosip.admin.processflow.regclient=${spring.cloud.config.uri}/registration-processor/${spring.profiles.active}/${spring.cloud.config.label}/registration-processor-${spring.profiles.active}.properties
@@ -202,7 +108,7 @@ mosip.kernel.zone-validation-url=https://api-internal.dev.mosip.net/v1/masterdat
 mosip.kernel.registrationcenterid.length=5
 javax.persistence.jdbc.url=jdbc:postgresql://api-internal.dev.mosip.net:5432/mosip_master
 javax.persistence.jdbc.user=postgres
-javax.persistence.jdbc.password=4YbeUrM2bD
+javax.persistence.jdbc.password=mosip123
 
 
 mosip.admin-services.audit.manager.api=https://api-internal.dev.mosip.io/v1/auditmanager/audits
@@ -220,7 +126,7 @@ mosip.admin-services.open-id.login_flow.name=authorization_code
 
 mosip.admin-services.open-id.clientid=mosip-admin-client
 
-mosip.admin-services.open-id.clientsecret=VkiJDv9JTsa2g8zN
+mosip.admin-services.open-id.clientsecret=xyz123
 
 mosip.admin-services.redirecturi=http://localhost:8098/v1/admin/login-redirect/
 
@@ -241,7 +147,7 @@ mosip.iam.module.login_flow.name=authorization_code
 mosip.iam.module.clientID=mosip-admin-client
 
 
-mosip.iam.module.clientsecret=VkiJDv9JTsa2g8zN
+mosip.iam.module.clientsecret=xyz123
 
 mosip.iam.module.redirecturi=https://api-internal.dev.mosip.net/v1/admin/login-redirect/
 
@@ -291,7 +197,7 @@ auth.server.admin.allowed.audience=mosip-regproc-client,mosip-prereg-client,mosi
 
 # Credential to request the token from OIDC provider.
 mosip.iam.adapter.clientid=mosip-admin-client
-mosip.iam.adapter.clientsecret=VkiJDv9JTsa2g8zN
+mosip.iam.adapter.clientsecret=xyz123
 mosip.iam.adapter.appid=admin
 
 ## packet-manager properties
