--- a/.github/workflows/push_trigger.yml
+++ b/.github/workflows/push_trigger.yml
@@ -120,9 +120,8 @@ jobs:
         sudo apt-get update
         sudo apt-get install libxml2-utils
     - name: Build with Maven
-      run: |
-        cd admin
-        mvn -B -U package -s $GITHUB_WORKSPACE/settings.xml --file pom.xml
+      run:
+        cd admin && mvn -B -U package -s $GITHUB_WORKSPACE/settings.xml --file pom.xml
 
     - name: Publish the maven package
       run: |
