--- a/admin/admin-service/pom.xml
+++ b/admin/admin-service/pom.xml
@@ -21,6 +21,12 @@
 		<kernel.version>1.2.1-SNAPSHOT</kernel.version>
 	</properties>
 	<dependencies>
+	   <dependency>
+			<groupId>io.mosip.kernel</groupId>
+			<artifactId>kernel-openid-bridge-api</artifactId>
+			<version>1.2.0.1-B2</version>
+			<scope>provided</scope>
+		</dependency>
 		<dependency>
 			<groupId>io.mosip.kernel</groupId>
 			<artifactId>kernel-core</artifactId>
