--- a/admin/admin-service/pom.xml
+++ b/admin/admin-service/pom.xml
@@ -147,13 +147,7 @@
 		<dependency>
 			<groupId>org.digibooster.spring.batch</groupId>
 			<artifactId>spring-batch-security</artifactId>
-			<version>1.0.0</version>
-			<exclusions>
-				<exclusion>
-					<groupId>org.slf4j</groupId>
-					<artifactId>slf4j-api</artifactId>
-				</exclusion>
-			</exclusions>
+			<version>1.1.0-RELEASE</version>
 		</dependency>
 
 	</dependencies>
