--- a/admin/kernel-syncdata-service/src/main/resources/application-dev.properties
+++ b/admin/kernel-syncdata-service/src/main/resources/application-dev.properties
@@ -48,7 +48,7 @@ mosip.kernel.syncdata-service-dynamicfield-url=https://dev.mosip.io/v1/masterdat
 
 mosip.kernel.keymanager-service-validate-url=http://localhost:8088/v1/keymanager/validate
 mosip.kernel.keymanager.cert.url=https://localhost:8800/v1/keymanager/getCertificate
-mosip.kernel.syncdata-service-machine-url=http://localhost:8086/v1/machines/%s/eng
+mosip.kernel.syncdata-service-machine-url=http://localhost:8086/v1/masterdata/machines/%s/eng
 mosip.kernel.auth.sendotp.url=https://dev.mosip.net/v1/authmanager/authenticate/sendotp
 
 #----------------- Websub config -----------------
