--- a/admin/kernel-syncdata-service/src/main/resources/application-local.properties
+++ b/admin/kernel-syncdata-service/src/main/resources/application-local.properties
@@ -178,3 +178,6 @@ syncdata.cache.snapshot.cron=0 0 23 * * *
 
 mosip.kernel.auth.appids.realm.map={prereg:'preregistration',ida:'mosip',registrationclient:'mosip',regproc:'mosip',partner:'mosip',resident:'mosip'}
 mosip.kernel.keymanager.unique.identifier.autoupdate=false
+auth.server.admin.issuer.internal.uri=https://iam.dev.mosip.net/auth/realms/
+auth.server.admin.issuer.domain.validate=false
+auth.server.admin.allowed.audience=mosip-regproc-client,mosip-prereg-client,mosip-admin-client,mosip-reg-client,mosip-resident-client
