--- a/admin/admin-service/pom.xml
+++ b/admin/admin-service/pom.xml
@@ -7,11 +7,11 @@
 	<parent>
 		<groupId>io.mosip.admin</groupId>
 		<artifactId>admin-parent</artifactId>
-		<version>1.2.0.1</version>
+		<version>1.2.1.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>admin-service</artifactId>
 	<name>admin-service</name>
-	<version>1.2.0.1</version>
+	<version>1.2.1.0-SNAPSHOT</version>
 	<url>http://maven.apache.org</url>
 	<packaging>jar</packaging>
 	<properties>
@@ -216,7 +216,7 @@
 	<dependency>
 		<groupId>io.mosip.kernel</groupId>
 		<artifactId>kernel-auth-adapter</artifactId>
-		<version>${project.version}</version>
+		<version>${kernel-auth-adapter.version}</version>
 	</dependency>
 	<dependency>
 		<groupId>io.netty</groupId>
