--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -6,7 +6,7 @@
 
 	<groupId>io.mosip.admin</groupId>
 	<artifactId>admin-parent</artifactId>
-	<version>1.2.1.0-SNAPSHOT</version>
+	<version>1.2.1.0</version>
 	<packaging>pom</packaging>
 
 	<name>admin</name>
